--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <hr />
         <img src="./images/Image (1).jpg" alt="Photo" height="200"/>
-        <h3>LIU HUAQING</h3>
+        <h3>LIU HuaQiang</h3>
         <p>AKKODiS Consulting Company<br />
              Tech Consultant</p>
         
