--- a/publics/contact.html
+++ b/publics/contact.html
@@ -1,6 +1,6 @@
 <h1>Contact Me</h1>
-<p>Tel: +81 8076492568</p>
-<p>Email: huaqing.liu@akkodis.co.jp</p>
+<p>Tel: +81 123456</p>
+<p>Email: huaqiang.liu@akkodis.co.jp</p>
 <p>Address:</p>
 <p>
   〒140-0002<br />
